--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,9 @@
 table {
     border-collapse: collapse;
-    ;
 }
 
 tr,
-td {
+th {
     border: 1px solid black;
     min-width: 100px;
     padding: 3px;
