--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,9 +2,10 @@ table {
     border-collapse: collapse;
 }
 
-tr,
-th {
+th,
+td {
     border: 1px solid black;
     min-width: 100px;
+    height: 25px;
     padding: 3px;
 }
