--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,10 @@ td {
     background-color: pink;
 }
 
+.current-column {
+    background-color: lightgreen;
+}
+
 #sum-bar {
     background-color: lightblue;
 }
