Highlight row on header row click

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,10 @@ td {
     background-color: lightgreen;
 }
 
+.current-row {
+    background-color: thistle;
+}
+
 #sum-bar {
     background-color: lightblue;
 }
